# social_media

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 519cc75c9fe8_initial_migration.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  chat.py  comments.py  photos.py  social.py  users.py
app/core/: celery_app.py
app/db/: session.py
app/models/: chat.py
app/schemas/: token.py
app/services/: email_service.py
app/tasks/: email_tasks.py
app/utils/: image.py
core/: config.py  security.py
db/: base.py
models/: comment.py  photo.py  social.py  user.py
schemas/: chat.py  comment.py  photo.py  user.py
services/: cache_service.py
