[project]
name = "social-media"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib==3.0.1",
    "alembic==1.13.1",
    "argon2-cffi==23.1.0",
    "asyncpg==0.29.0",
    "authlib==1.3.0",
    "celery==5.3.6",
    "email-validator>=2.3.0",
    "fastapi==0.109.0",
    "hiredis==2.3.2",
    "httpx==0.26.0",
    "passlib==1.7.4",
    "pillow==10.2.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "pytz==2023.3",
    "redis==5.0.1",
    "sqlalchemy==2.0.25",
    "uvicorn[standard]==0.27.0",
    "websockets==12.0",
]
